:arrow_up: Upgrade Symfony 5.1 to Symfony 5.3

--- a/.gitignore
+++ b/.gitignore
@@ -17,3 +17,8 @@
 ###< symfony/phpunit-bridge ###
 
 /node_modules/
+
+###> phpunit/phpunit ###
+/phpunit.xml
+.phpunit.result.cache
+###< phpunit/phpunit ###
